<?xml version="1.0" encoding="utf-8"?>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:id="@android:id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="6dp"
                app:cardBackgroundColor="#FFF"
                app:cardCornerRadius="0dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="72dp"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/ic_new_logo" />

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/app_name"
                            android:textColor="#000"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_info" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:orientation="vertical"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp">

                            <com.pixplicity.fontview.FontAppCompatTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_version_label"
                                android:textColor="#000" />

                            <com.pixplicity.fontview.FontAppCompatTextView
                                android:id="@+id/app_version"
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version_app"
                                android:textColor="#706f6f" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/changelogView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:foreground="?android:selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_history" />

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/changelog"
                            android:textColor="#000" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/developersView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_person" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:orientation="vertical"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp">

                            <com.pixplicity.fontview.FontAppCompatTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Main Developers"
                                android:textColor="#000" />

                            <com.pixplicity.fontview.FontAppCompatTextView
                                style="@style/FontTextViewStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="ODT Indonesia"
                                android:textColor="#706f6f" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/licensesView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:minHeight="48dp"
                        android:orientation="horizontal"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_description" />

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="32dp"
                            android:layout_marginStart="32dp"
                            android:paddingBottom="8dp"
                            android:paddingTop="8dp"
                            android:text="@string/about_libraries_label"
                            android:textColor="#000" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>